Bug #17840 mysqldump should not dump tables in database `cluster`
Submitted: 1 Mar 2006 21:14 Modified: 26 Apr 2006 12:29
Reporter: Tomas Ulin
Status: Closed
Category:Server: Cluster Severity:S2 (Serious)
Version:5.1 OS:
Assigned to: Martin Skold Target Version:

[1 Mar 2006 21:14] Tomas Ulin
Description:
cluster database contains data which is only valid locally to a cluster, and should thus
not be dumped for restore onto another cluster

How to repeat:
.
[24 Apr 2006 15:43] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/5403
[24 Apr 2006 15:53] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/5404
[25 Apr 2006 9:05] Martin Skold
Pushed to 5.1.10
[26 Apr 2006 12:29] Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html

Additional info:

Documented bugfix in 5.1.10 changelog. Closed.
[31 Aug 2006 11:41] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/11151

ChangeSet@1.2039, 2006-08-31 11:41:34+02:00, jonas@perch.ndb.mysql.com +1 -0
  Fix for Bug #17840  mysqldump should not dump tables in database cluster, skip cluster
  internal database