Fix for Bug #17840  mysqldump should not dump tables in database cluster, skip cluster internal database